sign up page started

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 :root {
   --heading-color: #444;
   --text-color: #999;
-  --primary-color: #111eda;
+  --primary-color: #000C66;
   --highlight-color: #c62121;
   --bg-color: #f4f4f4;
 }
