--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,7 +2,8 @@
     width: 100%;
     padding: 30px 0;
     box-sizing: border-box;
-    margin-bottom: 80px;
+    margin-bottom: 10px;
+    /* 10 changed from 80 */
   }
   
   .navbar ul {
