--- a/src/pages/journals/Journal.css
+++ b/src/pages/journals/Journal.css
@@ -39,8 +39,14 @@
   margin-right: 10px;
 }
 
-.project-summary + .btn {
+.journal-summary + .btn {
   margin-top: 20px;
+}
+
+.journal-summary .taught-by {
+  margin-top: 20px;
+  padding-top: 10px;
+  border-top: 1px solid #eee;
 }
 
 /* journal comments */
@@ -48,7 +54,7 @@
   margin-bottom: 0px;
 }
 
-.project-comments textarea {
+.journal-comments textarea {
   min-height: 40px;
   font-size: 1.5em;
 }
